js fix, wa link change

--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -87,3 +87,7 @@ iframe {
     background-color: #005db5;
     background-position: bottom;
 }
+
+.nav-link.active{
+    color: #005db5 !important;
+}
