--- a/lib/css/style.css
+++ b/lib/css/style.css
@@ -2,7 +2,7 @@
     background-image: url("../img/background-hero.png");
     background-repeat: no-repeat;
     background-position: top center;
-    background-size: cover;
+    background-size: contain;
 }
 
 iframe {
