--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -1926,6 +1926,9 @@
   .overflow-y-visible {
     overflow-y: visible;
   }
+  .scroll-smooth {
+    scroll-behavior: smooth;
+  }
   .rounded {
     border-radius: 0.25rem;
   }
