--- a/lib/css/output.css
+++ b/lib/css/output.css
@@ -2423,6 +2423,9 @@
   .text-left {
     text-align: left;
   }
+  .text-left\! {
+    text-align: left !important;
+  }
   .align-bottom {
     vertical-align: bottom;
   }
